force-app/main/default/objects/Computer_Skills_Answers__c/Computer_Skills_Answers__c.object-meta.xml
<CustomObject>
    <label>Computer Skills Answer</label>
    <nameField>
        <label>Computer Skills Answer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Computer Skills Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>