force-app/main/default/objects/Computer_Skills_Answers__c/fields/csa_a_02__c.field-meta.xml
<CustomField>
    <fullName>csa_a_02__c</fullName>
    <label>csa_a_02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>