force-app/main/default/objects/Computer_Skills_Answers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>csa_a_01__c</columns>
    <columns>csa_a_02__c</columns>
    <columns>csa_a_03__c</columns>
    <columns>csa_a_04__c</columns>
    <columns>csa_a_05__c</columns>
    <columns>csa_a_06__c</columns>
    <columns>csa_a_07__c</columns>
    <columns>csa_a_08__c</columns>
    <columns>csa_a_09__c</columns>
    <columns>csa_a_10__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>